force-app/main/default/objects/Vendor_Quote__c/Vendor_Quote__c.object-meta.xml
<CustomObject>
    <label>Vendor Quote</label>
    <nameField>
        <displayFormat>VQ-{0000}</displayFormat>
        <label>VQ #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Quotes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>