force-app/main/default/objects/Vendor_Quote__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <label>Quote To Vendor</label>
    <type>Date</type>
</CustomField>