force-app/main/default/objects/Vendor_Quote__c/fields/Restrict__c.field-meta.xml
<CustomField>
    <fullName>Restrict__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved</label>
    <type>Checkbox</type>
</CustomField>