force-app/main/default/objects/Vendor_Quote__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor</label>
    <referenceTo>Vendor__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Vendor_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>